# SPDX-FileCopyrightText: 2020 Dimitrij Kotrev
#
# SPDX-License-Identifier: CC0-1.0

add_library(piejam_runtime STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/activate_midi_device.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/add_bus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/apply_app_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/apply_session.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/control_midi_assignment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/deactivate_midi_device.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/delete_bus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/delete_fx_module.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/device_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/engine_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/finalize_ladspa_fx_plugin_scan.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/initiate_device_selection.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/insert_fx_module.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/ladspa_fx_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/load_app_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/load_session.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/midi_control_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/move_fx_module.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/persistence_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/refresh_devices.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/refresh_midi_devices.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/reload_missing_plugins.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/replace_fx_module.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/request_info_update.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/request_mixer_levels_update.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/request_parameters_update.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/save_app_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/save_session.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/scan_ladspa_fx_plugins.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/select_bus_channel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/select_fx_chain_bus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/select_period_size.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/select_samplerate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/set_bus_name.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/set_bus_solo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/set_float_parameter_normalized.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/set_parameter_value.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/actions/update_parameter_values.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/audio_engine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/audio_engine_middleware.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/channel_index_pair.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/components/fx_gain.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/components/fx_ladspa.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/components/mixer_bus.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/components/mute_solo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/device_io_fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/device_io.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/dynamic_key_object_map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/gain.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/get_parameter_name.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/internal.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/ladspa.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/ladspa_instances.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/ladspa_manager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/ladspa_processor_factory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/module.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/parameter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/parameter_assignment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/registry.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/fx/unavailable_ladspa.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ladspa_fx_middleware.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/locations.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/middleware_functors.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_assignment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_assignment_id.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_control_middleware.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_device_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_devices.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/midi_input_controller.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/mixer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/mixer_fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/float_.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/float_normalize.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/generic_value.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/int_.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter/maps_collection.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter_maps.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameter_processor_factory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/parameters.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/access.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/app_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/fx_midi_assignments.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/fx_preset.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/midi_assignment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence/session.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/persistence_middleware.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/midi_assignment_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/midi_input_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/midi_learn_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/midi_to_parameter_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/mute_solo_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/processors/parameter_processor_factory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/selected_device.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/selectors.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/state.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/stereo_level.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/store.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/store_dispatch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/subscriber.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/action_visitor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/batch_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/batch_action_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/cloneable_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/thunk_action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/runtime/ui/thunk_action_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/activate_midi_device.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/add_bus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/apply_app_config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/apply_session.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/control_midi_assignment.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/deactivate_midi_device.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/delete_bus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/delete_fx_module.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/finalize_ladspa_fx_plugin_scan.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/initiate_device_selection.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/insert_fx_module.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/load_app_config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/load_session.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/move_fx_module.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/refresh_devices.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/refresh_midi_devices.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/reload_missing_plugins.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/replace_fx_module.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/request_info_update.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/request_mixer_levels_update.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/request_parameters_update.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/save_app_config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/save_session.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/scan_ladspa_fx_plugins.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/select_bus_channel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/select_fx_chain_bus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/select_period_size.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/select_samplerate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/set_bus_name.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/set_bus_solo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/set_float_parameter_normalized.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/set_parameter_value.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/actions/update_parameter_values.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/audio_engine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/audio_engine_middleware.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/batch_action.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/components/fx_gain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/components/fx_ladspa.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/components/make_fx.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/components/mixer_bus.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/components/mute_solo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/fx/gain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/fx/ladspa.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/fx/ladspa_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/fx/parameter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/ladspa_fx_middleware.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/midi_assignment_id.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/midi_control_middleware.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/midi_input_controller.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/access.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/app_config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/fx_midi_assignments.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/fx_preset.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/midi_assignment.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence/session.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/persistence_middleware.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/processors/midi_assignment_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/processors/midi_input_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/processors/midi_learn_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/processors/midi_to_parameter_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/processors/mute_solo_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/selectors.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/state.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/store_dispatch.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/runtime/thunk_action.cpp
)

find_package(nlohmann_json REQUIRED)

target_compile_options(piejam_runtime PRIVATE -Wall -Wextra -Werror -pedantic-errors)
target_include_directories(piejam_runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(piejam_runtime
    PUBLIC
    piejam_redux
    piejam_numeric
    piejam_thread
    piejam_audio
    piejam_midi
    piejam_functional
    piejam_container
    piejam_reselect
    nlohmann_json
    PRIVATE
    fmt
    spdlog::spdlog
    piejam_algorithm
    piejam_range)

add_subdirectory(benchmarks)
add_subdirectory(tests)
