# SPDX-FileCopyrightText: 2020 Dimitrij Kotrev
#
# SPDX-License-Identifier: CC0-1.0

add_library(piejam_runtime STATIC
    include/piejam/runtime/actions/activate_midi_device.h
    include/piejam/runtime/actions/apply_app_config.h
    include/piejam/runtime/actions/apply_session.h
    include/piejam/runtime/actions/audio_engine_action.h
    include/piejam/runtime/actions/audio_io_process_action.h
    include/piejam/runtime/actions/control_midi_assignment.h
    include/piejam/runtime/actions/deactivate_midi_device.h
    include/piejam/runtime/actions/delete_fx_module.h
    include/piejam/runtime/actions/external_audio_device_actions.h
    include/piejam/runtime/actions/finalize_ladspa_fx_plugin_scan.h
    include/piejam/runtime/actions/fwd.h
    include/piejam/runtime/actions/fx_chain_actions.h
    include/piejam/runtime/actions/initiate_device_selection.h
    include/piejam/runtime/actions/insert_fx_module.h
    include/piejam/runtime/actions/ladspa_fx_action.h
    include/piejam/runtime/actions/load_app_config.h
    include/piejam/runtime/actions/load_session.h
    include/piejam/runtime/actions/midi_control_action.h
    include/piejam/runtime/actions/mixer_actions.h
    include/piejam/runtime/actions/move_fx_module.h
    include/piejam/runtime/actions/persistence_action.h
    include/piejam/runtime/actions/recorder_action.h
    include/piejam/runtime/actions/recording.h
    include/piejam/runtime/actions/refresh_devices.h
    include/piejam/runtime/actions/refresh_midi_devices.h
    include/piejam/runtime/actions/reload_missing_plugins.h
    include/piejam/runtime/actions/request_info_update.h
    include/piejam/runtime/actions/request_mixer_levels_update.h
    include/piejam/runtime/actions/request_parameters_update.h
    include/piejam/runtime/actions/request_streams_update.h
    include/piejam/runtime/actions/reset_fx_parameter_to_default_value.h
    include/piejam/runtime/actions/root_view_actions.h
    include/piejam/runtime/actions/save_app_config.h
    include/piejam/runtime/actions/save_session.h
    include/piejam/runtime/actions/scan_ladspa_fx_plugins.h
    include/piejam/runtime/actions/select_period_count.h
    include/piejam/runtime/actions/select_period_size.h
    include/piejam/runtime/actions/select_sample_rate.h
    include/piejam/runtime/actions/set_float_parameter_normalized.h
    include/piejam/runtime/actions/set_parameter_value.h
    include/piejam/runtime/actions/update_parameter_values.h
    include/piejam/runtime/actions/update_streams.h
    include/piejam/runtime/audio_engine.h
    include/piejam/runtime/audio_engine_middleware.h
    include/piejam/runtime/audio_stream.h
    include/piejam/runtime/channel_index_pair.h
    include/piejam/runtime/components/make_fx.h
    include/piejam/runtime/components/mixer_channel.h
    include/piejam/runtime/components/mute_solo.h
    include/piejam/runtime/components/solo_switch.h
    include/piejam/runtime/components/stream.h
    include/piejam/runtime/dynamic_key_shared_object_map.h
    include/piejam/runtime/external_audio.h
    include/piejam/runtime/external_audio_fwd.h
    include/piejam/runtime/fwd.h
    include/piejam/runtime/fx/fwd.h
    include/piejam/runtime/fx/get_parameter_name.h
    include/piejam/runtime/fx/ladspa_instances.h
    include/piejam/runtime/fx/ladspa_processor_factory.h
    include/piejam/runtime/fx/module.h
    include/piejam/runtime/fx/parameter_assignment.h
    include/piejam/runtime/fx/registry.h
    include/piejam/runtime/fx/unavailable_ladspa.h
    include/piejam/runtime/generic_action_visitor.h
    include/piejam/runtime/internal_fx_component_factory.h
    include/piejam/runtime/internal_fx_module_factory.h
    include/piejam/runtime/ladspa_fx/ladspa_fx_component.h
    include/piejam/runtime/ladspa_fx/ladspa_fx_module.h
    include/piejam/runtime/ladspa_fx_middleware.h
    include/piejam/runtime/locations.h
    include/piejam/runtime/middleware_functors.h
    include/piejam/runtime/midi_assignment.h
    include/piejam/runtime/midi_assignment_id.h
    include/piejam/runtime/midi_control_middleware.h
    include/piejam/runtime/midi_device_config.h
    include/piejam/runtime/midi_devices.h
    include/piejam/runtime/midi_input_controller.h
    include/piejam/runtime/mixer.h
    include/piejam/runtime/mixer_fwd.h
    include/piejam/runtime/parameter/float_.h
    include/piejam/runtime/parameter/float_normalize.h
    include/piejam/runtime/parameter/fwd.h
    include/piejam/runtime/parameter/generic_value.h
    include/piejam/runtime/parameter/int_.h
    include/piejam/runtime/parameter/map.h
    include/piejam/runtime/parameter_factory.h
    include/piejam/runtime/parameter_processor_factory.h
    include/piejam/runtime/parameter_value_to_string.h
    include/piejam/runtime/parameters.h
    include/piejam/runtime/parameters_map.h
    include/piejam/runtime/persistence/access.h
    include/piejam/runtime/persistence/app_config.h
    include/piejam/runtime/persistence/fwd.h
    include/piejam/runtime/persistence/fx_internal_id.h
    include/piejam/runtime/persistence/fx_midi_assignments.h
    include/piejam/runtime/persistence/fx_preset.h
    include/piejam/runtime/persistence/optional.h
    include/piejam/runtime/persistence/session.h
    include/piejam/runtime/persistence/strong_type.h
    include/piejam/runtime/persistence/variant.h
    include/piejam/runtime/persistence_middleware.h
    include/piejam/runtime/processors/fwd.h
    include/piejam/runtime/processors/midi_assignment_processor.h
    include/piejam/runtime/processors/midi_input_processor.h
    include/piejam/runtime/processors/midi_learn_processor.h
    include/piejam/runtime/processors/midi_to_parameter_processor.h
    include/piejam/runtime/processors/mute_solo_processor.h
    include/piejam/runtime/processors/parameter_processor_factory.h
    include/piejam/runtime/processors/stream_processor_factory.h
    include/piejam/runtime/recorder.h
    include/piejam/runtime/recorder_middleware.h
    include/piejam/runtime/root_view_mode.h
    include/piejam/runtime/selected_sound_card.h
    include/piejam/runtime/selectors.h
    include/piejam/runtime/solo_group.h
    include/piejam/runtime/state.h
    include/piejam/runtime/stereo_level.h
    include/piejam/runtime/store.h
    include/piejam/runtime/store_dispatch.h
    include/piejam/runtime/subscriber.h
    include/piejam/runtime/ui/action.h
    include/piejam/runtime/ui/action_tracker_middleware.h
    include/piejam/runtime/ui/action_visitor.h
    include/piejam/runtime/ui/cloneable_action.h
    include/piejam/runtime/ui/fwd.h
    include/piejam/runtime/ui/generic_action_visitor.h
    include/piejam/runtime/ui/profiling_reducer.h
    include/piejam/runtime/ui/thunk_action.h
    include/piejam/runtime/ui/thunk_action_impl.h
    include/piejam/runtime/ui/update_state_action.h
    include/piejam/runtime/ui_parameter.h
    include/piejam/runtime/ui_parameter_descriptors_map.h
    src/piejam/runtime/actions/activate_midi_device.cpp
    src/piejam/runtime/actions/apply_app_config.cpp
    src/piejam/runtime/actions/apply_session.cpp
    src/piejam/runtime/actions/control_midi_assignment.cpp
    src/piejam/runtime/actions/deactivate_midi_device.cpp
    src/piejam/runtime/actions/delete_fx_module.cpp
    src/piejam/runtime/actions/external_audio_device_actions.cpp
    src/piejam/runtime/actions/finalize_ladspa_fx_plugin_scan.cpp
    src/piejam/runtime/actions/fx_chain_actions.cpp
    src/piejam/runtime/actions/insert_fx_module.cpp
    src/piejam/runtime/actions/mixer_actions.cpp
    src/piejam/runtime/actions/move_fx_module.cpp
    src/piejam/runtime/actions/recording.cpp
    src/piejam/runtime/actions/request_mixer_levels_update.cpp
    src/piejam/runtime/actions/request_parameters_update.cpp
    src/piejam/runtime/actions/reset_fx_parameter_to_default_value.cpp
    src/piejam/runtime/actions/root_view_actions.cpp
    src/piejam/runtime/actions/scan_ladspa_fx_plugins.cpp
    src/piejam/runtime/actions/set_float_parameter_normalized.cpp
    src/piejam/runtime/actions/set_parameter_value.cpp
    src/piejam/runtime/actions/update_parameter_values.cpp
    src/piejam/runtime/actions/update_streams.cpp
    src/piejam/runtime/audio_engine.cpp
    src/piejam/runtime/audio_engine_middleware.cpp
    src/piejam/runtime/components/make_fx.cpp
    src/piejam/runtime/components/mixer_channel.cpp
    src/piejam/runtime/components/mute_solo.cpp
    src/piejam/runtime/components/solo_switch.cpp
    src/piejam/runtime/components/stream.cpp
    src/piejam/runtime/ladspa_fx/ladspa_fx_component.cpp
    src/piejam/runtime/ladspa_fx/ladspa_fx_module.cpp
    src/piejam/runtime/ladspa_fx_middleware.cpp
    src/piejam/runtime/midi_assignment_id.cpp
    src/piejam/runtime/midi_control_middleware.cpp
    src/piejam/runtime/midi_input_controller.cpp
    src/piejam/runtime/mixer.cpp
    src/piejam/runtime/parameter_value_to_string.cpp
    src/piejam/runtime/persistence/access.cpp
    src/piejam/runtime/persistence/app_config.cpp
    src/piejam/runtime/persistence/fx_internal_id.cpp
    src/piejam/runtime/persistence/session.cpp
    src/piejam/runtime/persistence_middleware.cpp
    src/piejam/runtime/processors/midi_assignment_processor.cpp
    src/piejam/runtime/processors/midi_input_processor.cpp
    src/piejam/runtime/processors/midi_learn_processor.cpp
    src/piejam/runtime/processors/midi_to_parameter_processor.cpp
    src/piejam/runtime/processors/mute_solo_processor.cpp
    src/piejam/runtime/processors/stream_processor_factory.cpp
    src/piejam/runtime/recorder_middleware.cpp
    src/piejam/runtime/selectors.cpp
    src/piejam/runtime/solo_group.cpp
    src/piejam/runtime/state.cpp
    src/piejam/runtime/store_dispatch.cpp
    src/piejam/runtime/thunk_action.cpp
)

find_package(nlohmann_json REQUIRED)

target_compile_options(piejam_runtime PRIVATE -Wall -Wextra -Werror -pedantic-errors $<$<CONFIG:Release>:-Wno-maybe-uninitialized>)
target_include_directories(piejam_runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(piejam_runtime
    PUBLIC
    piejam_audio
    piejam_ladspa
    piejam_midi
    piejam_range
    piejam_redux
    piejam_reselect

    PRIVATE
    piejam_algorithm
    piejam_functional
    piejam_numeric
    piejam_thread
    nlohmann_json
    fmt
    spdlog::spdlog
    SndFile::sndfile)

add_subdirectory(benchmarks)
add_subdirectory(tests)
